fixed color contrast

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -256,5 +256,5 @@ nav a {
 .grid{
     display: grid;
     grid-template-columns: 700px 700px;
-    color: white;
+    
 }
